umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_moleculelike_rdkit_torsion.etkdg.v2.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 17
bond_count: 17
sum_formula: C6H8N2O
graph6: PhCKOC@O@?A?@?@??_?@??G?
